--- a/style.css
+++ b/style.css
@@ -1,13 +1,139 @@
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: transparent;
+}
+
+.links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.link {
+  margin: 10px 30px;
+  color: #9F3442;
+}
+
+.link:hover {
+  color: #458D2E;
+}
+
+p, ul, ol {
+  font-size: 20px;
+  bakcground: pink;
+}
+
 body {
   background: pink;
-  font-family: arial;
+  font-family: Viaoda Libre;
+   text-align: center;
 }
 
 h1 {
-  color: green;
+  color: black;
   font-size: 32px;
+  background: pink;
 }
 
 h2, h3, h4 {
   font-size: 28px;
+  background: pink;
+}
+img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  text-align: center;
+}
+
+a:hover {
+  color: brown;
+}
+
+a, a:hover {
+  text-decoration: none;
+}
+
+div {
+ background: pink;
+}
+
+
+.btn-pink {
+  display: inline-block;
+  color: white;
+  background: #C86472;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.btn-pink:hover {
+  color: white;
+  opacity: 0.8;
+}
+
+
+.line-transparent {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.line-light {
+  height: 5px;
+  width: 20%;
+  background: #EE9CA7;
+}
+
+.line-medium {
+  height: 5px;
+  width: 30%;
+  background: #C86472;
+}
+
+.line-hard {
+  height: 5px;
+  width: 50%;
+  background: #9F3442;
+}
+
+.map {
+  text-align: center;
+  background: transparent;
+}
+
+.video{
+  text-align: center;
+  background: transparent;
+}
+
+.modale {
+  background : transparent;
+  text-align: center;
+}
+
+.contact{
+  text-align: center;
+  background: transparent;
+}
+
+.logo{
+  height: 150px;
+  width: 150px;
+}
+
+.box{
+  border:3px solid black;
+  border radius: 10px;
+  box-shadow: 10px light black;
+  margin: 50px;
+  padding: 5px;
+}
+
+.ul{
+  text-align: left; 
 }
