--- a/style.css
+++ b/style.css
@@ -21,14 +21,41 @@
 
 p, ul, ol {
   font-size: 20px;
-  bakcground: pink;
+  background: pink;
 }
 
 body {
   background: pink;
   font-family: Viaoda Libre;
    text-align: center;
+
 }
+
+.line-transparent {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.line-light {
+  height: 5px;
+  width: 20%;
+  background: #EE9CA7;
+}
+
+.line-medium {
+  height: 5px;
+  width: 30%;
+  background: #C86472;
+}
+
+.line-hard {
+  height: 5px;
+  width: 50%;
+  background: #9F3442;
+}
+
 
 h1 {
   color: black;
@@ -37,8 +64,10 @@ h1 {
 }
 
 h2, h3, h4 {
+color : grey;
   font-size: 28px;
   background: pink;
+
 }
 img {
   width: 300px;
@@ -128,8 +157,8 @@ div {
 
 .box{
   border:3px solid black;
-  border radius: 10px;
-  box-shadow: 10px light black;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px grey;
   margin: 50px;
   padding: 5px;
 }
